--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 PORT=3000
 NODE_ENV=development
-DATABASE_URL="postgresql://postgres:docker@localhost:3032/projectdb?schema=public"
+DATABASE_URL="postgresql://postgres:docker@192.168.99.100:3032/projectdb?schema=public"
