--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
 PORT=3000
 NODE_ENV=test
-DATABASE_URL="postgresql://postgres:docker@localhost:3032/projectdb?schema=test"
+DATABASE_URL="postgresql://postgres:docker@192.168.99.100:3032/projectdb?schema=test"
